2010-12-01  Per Bothner  <per@bothner.com>

	* AnnotationDefaultAttr.java: New class, extends Attribute.
	* Makefile.am: Update accordingly.
	* ClassFileInput.java (readAttribute): Read AnnotationDefault attribute.
	* RuntimeAnnotationsAttr.java (write, assignConstants): Change to
	static, so they can be called from AnnotationDefaultAttr.
	* AnnotationEntry.java (print): Use printQuoteString for strings.

2010-11-29  Per Bothner  <per@bothner.com>

	Aim for complete support for Annotations.
	* AttrContainer.java (getConstants): New method.
	* Attribute.java (getConstants): New method.
	* Field.java (getConstants): New method.
	* ClassTypeWriter.java (printOptionalIndex): Skip if index is <= 0.
	* AnnotationEntry.java (Value): New member class.
	Add partial javax.lang.model.AnnotationValue support.
	Add support for printing AnnotationEntry and Value instances.
	* RuntimeAnnotationsAttr.java: Add support for parsing, generating,
	and printing Annotation attributes.
	Split support for printing RuntimeAnnotationsAttr into separate
	pieces: First read/parse, then separate print parsed AnnotationEntrys.
	* ClassFileInput.java (readAttribute): Change to use new
	RuntimeAnnotationsAttr.readAnnotationEntry rather than reading an
	unparsed data array.

2010-11-26  Per Bothner  <per@bothner.com>

	* dump.java (main): If the context ClassLoader is null,
	use the SystemClassLoader.

2010-11-22  Per Bothner  <per@bothner.com>

	* StackMapTableAttr.java (encodeVerificationType): Fix handling of
	Type.nullType - it's imlementation-type is objectType.

2010-11-18  Per Bothner  <per@bothner.com>

	* ClassType.java (getSimpleName): Make use of enclosingMember,
	rather than unreliable scanning for '$'.

	* InnerClassesAttr.java (print): Add a printOptionalIndex call.

2010-10-26  Per Bothner  <per@bothner.com>

	* PrimType.java (compare): Catch case where other is a LangPrimType.
	For example compare of Type.intType and Scheme.booleanType should be -1.
